Submenu for context menu

--- a/frontend/src/public-index.html
+++ b/frontend/src/public-index.html
@@ -13,6 +13,6 @@
   <title>Public index</title>
 </head>
 <body>
-<app-frontend></app-frontend>
+<app-app-public></app-app-public>
 </body>
 </html>
