--- a/frontend/src/public-index.html
+++ b/frontend/src/public-index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <base href="/">
-  <title>Úvodní stránka</title>
+  <title>Přehled webů</title>
 </head>
 <body>
 <app-public></app-public>
