--- a/frontend/src/admin-index.html
+++ b/frontend/src/admin-index.html
@@ -11,7 +11,7 @@
   <base href="/">
   <title>Úvodní stránka</title>
 </head>
-<body>
+<body class="sidebar-mini layout-fixed">
 <app-admin></app-admin>
 </body>
 </html>
